# Data_Base_Manager

./: README.md  pyproject.toml
src/: Data_Base_Table.py  Data_Base_manager.py  config.py  connect_to_DB.py  employers.json  hh_api.py  main.py  vacancies.json
